--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <nav>
-        <a href="#"><img class="logo" src="https://www.cbvj.org.br/index/wp-content/uploads/2017/10/default-logo.png" alt=""></a>
+        <a href="#"><img class="logo" src="https://cdn-icons-png.freepik.com/512/9316/9316745.png" alt=""></a>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
