--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="footer">
     <div class="footer-section">
-        <img src="logo.png" alt="Logo" class="footer-logo">
+        <img src="https://cdn-icons-png.freepik.com/512/9316/9316745.png" alt="Logo" class="footer-logo">
     </div>
     <div class="footer-section">
         <h3>Section 1</h3>
@@ -11,52 +11,11 @@
         </ul>
     </div>
     <div class="footer-section">
-        <h3>Section 2</h3>
+        <h3>Contato</h3>
         <ul>
-            <li><a href="#">Link A</a></li>
+            <li><a href="#">monteiromatheus047&#64;gmail.com</a></li>
             <li><a href="#">Link B</a></li>
             <li><a href="#">Link C</a></li>
         </ul>
     </div>
 </div>
-
-<style>
-.footer {
-    background-color: #333;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;
-    padding: 16px;
-    font-family: Arial, sans-serif;
-}
-
-.footer-section {
-    flex: 1;
-    margin: 0 10px;
-}
-
-.footer-section h3 {
-    border-bottom: 2px solid #555;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
-}
-
-.footer-section ul {
-    list-style: none;
-    padding: 0;
-}
-
-.footer-section ul li {
-    margin: 5px 0;
-}
-
-.footer-section ul li a {
-    color: #fff;
-    text-decoration: none;
-    transition: color 0.3s;
-}
-
-.footer-section ul li a:hover {
-    color: #ddd;
-}
-</style>
