update: improved styles and started working on new page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,21 +1,15 @@
 <div class="footer">
-    <div class="footer-section">
+    <div class="footer-main-section">
         <img src="https://cdn-icons-png.freepik.com/512/9316/9316745.png" alt="Logo" class="footer-logo">
+
+        <p>
+            Sistema de gerenciamento de biblioteca desenvolvido para consumir uma api em JAVA para a disciplina do instituto federal de orientação a objetos.
+        </p>
     </div>
     <div class="footer-section">
-        <h3>Section 1</h3>
+        <h3>Desenvolvedores</h3>
         <ul>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-        </ul>
-    </div>
-    <div class="footer-section">
-        <h3>Contato</h3>
-        <ul>
-            <li><a href="#">monteiromatheus047&#64;gmail.com</a></li>
-            <li><a href="#">Link B</a></li>
-            <li><a href="#">Link C</a></li>
+            <li><a href="https://github.com/MatheusMonteiro8906" target="_blank">Matheus Monteiro</a></li>
         </ul>
     </div>
 </div>
