--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
     <div class="container">
-        <h1>404 - Página não encontrada!</h1>
+        <h1>Página não encontrada!</h1>
         <p>Oops! Parece que a página que você está procurando não existe.</p>
         <div class="game-container">
             <iframe       
