--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,13 +3,23 @@
     background-color: #333;
     color: #fff;
     display: flex;
-    justify-content: space-between;
+    flex: 0;
     padding: 16px;
-    font-family: "Roboto", Arial, sans-serif;
+}
+
+.footer-main-section {
+    width: 16%;
+    margin: 0 10px;
+    padding-right: 3rem;
+    text-align: center;
+}
+
+p{
+    text-align: justify;
 }
 
 .footer-section {
-    flex: 1;
+    width: 16%;
     margin: 0 10px;
 }
 
