--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,12 +4,11 @@
     background-color: #f5f5f5;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding-bottom: 200px;
+    padding-bottom: 8rem;
 }
 
 .home-container h1 {
     color: #4a4a4a;
-    font-family: "Roboto", 'Arial', sans-serif;
     margin-bottom: 20px;
 }
 
