--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,13 @@
 <div class="home-container">
     <h1>Bem-vindo ao Sistema de Gerenciamento de Biblioteca</h1>
     <div class="options">
+
+        @for (PageItem of PageLinksList; track PageItem.name){
+            <a routerLink={{PageItem.ref}} class="option-button">{{PageItem.name}}</a>    
+        }
+<!-- 
         <a routerLink="cadastro" routerLinkActive="active" ariaCurrentWhenActive="page" class="option-button" style="cursor: pointer;">Cadastro de livros</a>
-        <a href="/cadastro" class="option-button">Edição de Livros</a>
-        <a href="/exclusao-livros" class="option-button">Exclusão de Livros</a>
-        <a href="/visualizacao-livros" class="option-button">Visualização de Livros Disponíveis</a>
-        <a href="/registro-membros" class="option-button">Registro de Membros</a>
-        <a href="/emprestimos" class="option-button">Empréstimos de Livros</a>
-        <a href="/devolucao-livros" class="option-button">Devolução de Livros</a>
-        <a href="/gerenciamento-atrasos" class="option-button">Gerenciamento de Atrasos</a>
-        <a href="/historico-emprestimos" class="option-button">Histórico de Empréstimos</a>
-        <a href="/relatorios-emprestimos" class="option-button">Relatórios de Empréstimos por Período</a>
-        <a href="/livros-mais-emprestados" class="option-button">Livros Mais Emprestados</a>
+        <a href="/cadastro" class="option-button">Edição de Livros</a> -->
     </div>
 </div>
 
