--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="options">
 
         @for (PageItem of PageLinksList; track PageItem.name){
-            <a routerLink={{PageItem.ref}} class="option-button">{{PageItem.name}}</a>    
+            <a routerLink={{PageItem.ref}} class="primary-button">{{PageItem.name}}</a>    
         }
 <!-- 
         <a routerLink="cadastro" routerLinkActive="active" ariaCurrentWhenActive="page" class="option-button" style="cursor: pointer;">Cadastro de livros</a>
