--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,28 @@
 body{
     background-color: #f0f8ff;
   }
+
+  .primary-button {
+    display: block;
+    padding: 15px 25px;
+    margin: 10px;
+    background-color: #8b4513;
+    color: #f0f8ff;
+    text-decoration: none;
+    border-radius: 8px;
+    transition: background-color 0.3s, transform 0.3s;
+    font-size: 16px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.primary-button:hover {
+    background-color: #a0522d;
+    transform: translateY(-2px);
+}
+
+.primary-button:disabled {
+    background-color: #ccc;
+    color: #666;
+    cursor: not-allowed;
+}
