update: added Angular Material to project
use of ngFor for book view page and started child component use for page construction

--- a/src/app/visualizacao-de-livros/visualizacao-de-livros.component.html
+++ b/src/app/visualizacao-de-livros/visualizacao-de-livros.component.html
@@ -12,14 +12,7 @@
 </section> -->
 
 <section class="book-list">
-    <div class="book-card">
-        <img src="https://i.pinimg.com/736x/39/c1/24/39c124f6e987492b03f1f5aa6c259d3a.jpg" alt="Book Image" class="book-image">
-        <h2 class="book-title"> Nome</h2>
-        <p class="book-synopsis">sinopse</p>
-        <div class="book-actions">
-            <button class="edit-button">Editar Informação</button>
-            <button class="request-button">Solicitar Empréstimo</button>
-            <button class="remove-button">Remover</button>
-        </div>
+    <div class="book-card" *ngFor="let book of AllBooks" >
+        <app-card-livros [book]="book" />
     </div>
 </section>
