--- a/src/app/card-livros/card-livros.component.html
+++ b/src/app/card-livros/card-livros.component.html
@@ -1,9 +1,20 @@
-<img src="https://i.pinimg.com/736x/39/c1/24/39c124f6e987492b03f1f5aa6c259d3a.jpg" alt="Book Image" class="book-image">
-<h2 class="book-name"> </h2>
-<p class="book-synopsis">{{book.synopsis}}</p>
-<p class="book-rating"></p>
-<div class="book-actions">
-    <button class="edit-button">Editar Informação</button>
-    <button class="request-button">Solicitar Empréstimo</button>
-    <button class="remove-button">Remover</button>
-</div>
+<mat-card appearance="outlined">
+    <mat-card-header>
+        <mat-card-title>{{book.name}}</mat-card-title>
+        <mat-card-subtitle>{{book.synopsis}}</mat-card-subtitle>
+    </mat-card-header>
+
+    <mat-card-content>
+        <ng-container *ngFor="let stars of [].constructor(book.rating)">
+            <mat-icon aria-hidden="false" fontIcon="star" style="color: gold;"></mat-icon>
+        </ng-container>
+    </mat-card-content>
+    
+    <mat-card-footer>
+        <mat-card-actions>	
+            <button class="edit-button">Editar Informação</button>
+            <button class="request-button">Solicitar Empréstimo</button>
+            <button class="remove-button">Remover</button>
+        </mat-card-actions>
+    </mat-card-footer>
+</mat-card>
