--- a/src/app/visualizacao-de-livros/visualizacao-de-livros.component.css
+++ b/src/app/visualizacao-de-livros/visualizacao-de-livros.component.css
@@ -1,6 +1,7 @@
 .book-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    gap: 1.4rem; 
+    padding: 10px;
+    margin: 2rem 0;
 }
