--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -1,64 +1,35 @@
 
-.form-container {
+.wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 2rem 0;
+    margin: 4rem 0;
 }
 
-form {
-    border: 1px solid #808080;
-    border-radius: 0.25rem;
-    padding: 2rem;
+.main-card {
+    padding: 1.6rem;
+    min-height: 50vh;
+    min-width: 24rem;
+    align-items: center;
 }
 
-.form-group {
-    position: relative;
-    margin-bottom: 1.5rem;
+.form-input{
+    gap: 0.6rem;
+    width: 52vh;
 }
 
-.form-control {
-    width: 90%;
-    padding: 0.75rem;
-    font-size: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 0.25rem;
-    background-color: #f9f9f9;
-    transition: border-color 0.3s, box-shadow 0.3s;
+.form-title{
+    margin-bottom: 2rem;
+    font-size: 1.75rem;
 }
 
-.form-control:focus {
-    border-color: #007bff;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-}
+.submit-button{
+    width: 100%;
 
-.form-control::placeholder {
-    color: transparent;
-    transition: color 0.3s;
-}
-
-.form-control:focus::placeholder {
-    color: transparent;
-}
-
-.form-control:focus + label,
-.form-control:not(:placeholder-shown) + label {
-    transform: translateY(-1.7rem);
-    font-size: 0.75rem;
-    color: #007bff;
-}
-
-label {
-    position: absolute;
-    top: 0.75rem;
-    left: 0.75rem;
-    font-size: 1rem;
-    color: #6c757d;
-    pointer-events: none;
-    transition: all 0.3s;
-}
-
-.submitButton{
-    width: 90%;
+    &:not(:disabled) {
+        width: 100%;
+        color: var(--primary-text-color);
+        background-color: var(--primary-color);
+    }
 }
