--- a/src/app/card-livros/card-livros.component.html
+++ b/src/app/card-livros/card-livros.component.html
@@ -1,7 +1,7 @@
 <mat-card appearance="outlined" class="book-item">
     <mat-card-header>
-        <mat-card-title>{{book.name}}</mat-card-title>
-        <mat-card-subtitle>{{book.synopsis}}</mat-card-subtitle>
+        <mat-card-title class="card-title">{{book.name}}</mat-card-title>
+        <mat-card-subtitle class="card-subtitle">{{book.synopsis}}</mat-card-subtitle>
     </mat-card-header>
 
     <mat-card-content class="rating-row">
@@ -15,18 +15,18 @@
 
             <div class="button-row">
                 <div class="button-row-primary">
-                    <button mat-fab extended>
+                    <button mat-fab extended class="action-button">
                         <mat-icon>edit</mat-icon>
                         Editar
                     </button>
                     
-                    <button mat-fab extended >
+                    <button mat-fab extended class="action-button">
                         <mat-icon>date_range</mat-icon>
                         Solicitar empréstimo 
                     </button>       
                 </div>
                 
-                <button mat-mini-fab>
+                <button mat-mini-fab color="warn">
                     <mat-icon>delete</mat-icon> 
                 </button>
             </div>
