--- a/src/app/components/page-not-found/page-not-found.component.css
+++ b/src/app/components/page-not-found/page-not-found.component.css
@@ -5,8 +5,10 @@
 }
 h1 {
     font-size: 3em;
-    margin-bottom: 0.5em;
+    margin-bottom: 1.6em;
+    margin-top: 1.6rem;
 }
+
 p {
     font-size: 1.5em;
     margin-bottom: 1em;
