--- a/src/app/components/emprestimos/emprestimos.component.html
+++ b/src/app/components/emprestimos/emprestimos.component.html
@@ -5,7 +5,7 @@
         </mat-card-header>
 
         <mat-card-content>
-            <form [formGroup]="rangeForm">
+            <form [formGroup]="rangeForm" (ngSubmit)="onsubmit()">
 
                 <div class="form-group">
                     <mat-form-field>
@@ -19,9 +19,9 @@
                         <mat-date-range-picker #picker></mat-date-range-picker>
                     </mat-form-field>
                 </div>
-        <!-- <mat-card-footer>
-            <button type="submit" mat-flat-button class="submit-button" [disabled]="!rangeForm  .valid">Cadastrar</button>
-        </mat-card-footer> -->
+        <mat-card-footer>
+            <button type="submit" mat-flat-button class="submit-button" [disabled]="!rangeForm.valid">Cadastrar</button>
+        </mat-card-footer>
     </form>
 </mat-card-content>
 </mat-card>        
