update: improved date handler and overall application style

--- a/src/app/components/visualizacao-de-livros/visualizacao-de-livros.component.html
+++ b/src/app/components/visualizacao-de-livros/visualizacao-de-livros.component.html
@@ -5,6 +5,6 @@
         </div>
     </div>
     <ng-template #noBooks>
-        <p>Nenhum livro encontrado</p>
+        <p class="no-books-title">Nenhum livro encontrado!</p>
     </ng-template>
 </section>
