--- a/src/app/components/emprestimos/emprestimos.component.css
+++ b/src/app/components/emprestimos/emprestimos.component.css
@@ -4,31 +4,63 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 4rem 0;
+    margin: 2rem 0;
+}
+
+.no-books-title{
+        font-size: 22px;
+        font-weight: 600;
+}
+
+.divider{
+    width: 93vw;
 }
 
 .main-card {
     padding: 1.6rem;
-    min-height: 50vh;
-    min-width: 24rem;
+    min-height: 60vh;
+    min-width: 75vw;
+    max-width: 95vw;
     align-items: center;
 }
 
-.form-input{
-    gap: 0.6rem;
-    width: 52vh;
+.form-group{
+    gap: 1rem;
+    display: flex;
+    flex: 1;
 }
 
-.form-title{
+.date-picker {
+    min-width: 14vw;
+    width: 14vw;
+    max-width: 14vw;
+}
+
+.book-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: stretch;
+    justify-content: space-evenly;
+    min-width: 60vw;
+}
+
+.card-emprestimo{
+    padding-top: 1rem;
+    max-width: 30vw;
+}
+
+.page-title{
     margin-bottom: 2rem;
     font-size: 1.75rem;
+    font-weight: 500;
 }
 
 .submit-button{
-    width: 100%;
-
+    margin-top: 0.5rem;
+    font-weight: 600;
+    font-size: 1rem;
+    width: 8vw;
     &:not(:disabled) {
-        width: 100%;
         color: var(--primary-text-color);
         background-color: var(--primary-color);
     }
