--- a/src/app/components/card-mais-emprestados/card-mais-emprestados.component.css
+++ b/src/app/components/card-mais-emprestados/card-mais-emprestados.component.css
@@ -7,8 +7,9 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
     height: 100%;
-    width: 45vh;
+    width: 95%;
 }
+
 
 .card-title{
     font-size: 1.8em;
@@ -22,4 +23,33 @@
     font-size: 1.2em;
     color: #5f4b32; 
     margin: 10px 0;
+}
+
+.book-dourado{
+    border: 2.5px solid #FFD700;
+
+    &:first-child{
+        .texto-dourado{
+            color: #FFD700;
+        }
+    }
+}
+
+.book-prata{
+    border: 2.5px solid #C0C0C0;
+
+    &:first-child{
+        .texto-prata{
+            color: #C0C0C0;
+        }
+    }
+}
+
+.book-bronze{
+    border: 2.5px solid #CD7F32;
+    &:first-child{
+        .texto-bronze{
+            color: #CD7F32;
+        }
+    }
 }
