--- a/src/app/components/card-emprestimos/card-emprestimos.component.html
+++ b/src/app/components/card-emprestimos/card-emprestimos.component.html
@@ -9,3 +9,15 @@
             <mat-icon aria-hidden="false" fontIcon="star" style="color: gold;" class="rating-icon"></mat-icon>
         </ng-container>
     </mat-card-content>
+
+    <mat-card-footer class="book-footer">
+        <mat-card-actions>	
+            <div class="button-row">
+                    <button mat-fab extended class="action-button">
+                        <mat-icon>book</mat-icon>
+                        Realizar devolução 
+                    </button>       
+                </div>
+        </mat-card-actions>
+    </mat-card-footer>
+</mat-card>
