feat: add hint message to forms

--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -16,6 +16,7 @@
                     <mat-form-field appearance="fill" hideRequiredMarker class="form-input">
                         <mat-label>Avaliação</mat-label>
                         <input matInput placeholder="Avaliação" formControlName="rating" type="number" min="0" max="5">
+                        <mat-hint>A avaliação deve ser entre 0 a 5.</mat-hint>
                     </mat-form-field>
                 </div>
                 <div>
