--- a/src/app/components/registro-de-membros/registro-de-membros.component.html
+++ b/src/app/components/registro-de-membros/registro-de-membros.component.html
@@ -21,7 +21,8 @@
                 <div>
                     <mat-form-field appearance="fill" hideRequiredMarker class="form-input">
                         <mat-label>Idade</mat-label>
-                        <input matInput placeholder="Idade" formControlName="age" type="number" min="0" max="110">
+                        <input matInput placeholder="Idade" formControlName="age" type="number" min="12" max="110">
+                        <mat-hint>A idade ser entre 12 a 110.</mat-hint>
             </mat-form-field>
                 </div>
                 <mat-card-footer>
