update: changed all application base to movies instead of books

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home-container">
-    <h1>Bem-vindo ao Sistema de Gerenciamento de Biblioteca</h1>
+    <h1>Bem-vindo ao Sistema da locadora!</h1>
     <div class="options">
 
         @for (pageItem of PageLinksList; track pageItem.name){
