--- a/src/app/components/card-filmes/card-filmes.component.css
+++ b/src/app/components/card-filmes/card-filmes.component.css
@@ -1,4 +1,4 @@
-.book-item {
+.movie-item {
     margin-top: 10px;
     margin: 10px;
     border: 1px solid #e6e6fa;
@@ -10,6 +10,7 @@
 
 .card-title{
     font-size: 1.8em;
+
 }
 
 .card-subtitle {
@@ -31,21 +32,24 @@
     }
 }
 
-.book-title {
+.movie-footer {
+    margin-top: auto;
+}
+
+.movie-title {
     font-size: 1.2em;
     color: #5f4b32; 
     margin: 10px 0;
 }
 
-.book-synopsis {
+.movie-synopsis {
     font-size: 0.9em;
     color: #333;
     padding: 0 10px;
     margin-bottom: 10px;
 }
 
-
-.book-actions {
+.movie-actions {
     display: flex;
     justify-content: space-around;
     padding: 10px;
@@ -54,8 +58,7 @@
 
 .button-row{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     width: 100%;
     margin-bottom: 0.5rem;
 }
@@ -66,7 +69,16 @@
 }
 
 .action-button {
-    width: 85%;
     color: var(--primary-text-color);
     background-color: var(--primary-color);
 }
+
+.remove-button {
+    background-color: var(--primary-color);
+}
+
+/* 
+ button {
+    background-color: #5f4b32; 
+
+} */
