--- a/src/app/components/card-alugados/card-alugados.component.html
+++ b/src/app/components/card-alugados/card-alugados.component.html
@@ -1,20 +1,20 @@
-<mat-card appearance="outlined" class="book-item">
+<mat-card appearance="outlined" class="movie-item">
     <mat-card-header>
-        <mat-card-title class="card-title">{{book.name}}</mat-card-title>
-        <mat-card-subtitle class="card-subtitle">{{book.synopsis}}</mat-card-subtitle>
+        <mat-card-title class="card-title">{{movie.name}}</mat-card-title>
+        <mat-card-subtitle class="card-subtitle">{{movie.synopsis}}</mat-card-subtitle>
     </mat-card-header>
 
     <mat-card-content class="rating-row">
-        <ng-container *ngFor="let stars of [].constructor(book.rating)">
+        <ng-container *ngFor="let stars of [].constructor(movie.rating)">
             <mat-icon aria-hidden="false" fontIcon="star" style="color: gold;" class="rating-icon"></mat-icon>
         </ng-container>
     </mat-card-content>
 
-    <mat-card-footer class="book-footer">
+    <mat-card-footer class="movie-footer">
         <mat-card-actions>	
             <div class="button-row">
                     <button mat-fab extended class="action-button">
-                        <mat-icon>book</mat-icon>
+                        <mat-icon>movie</mat-icon>
                         Realizar devolução 
                     </button>       
                 </div>
