--- a/src/app/components/card-mais-alugados/card-mais-alugados.component.css
+++ b/src/app/components/card-mais-alugados/card-mais-alugados.component.css
@@ -1,4 +1,4 @@
-.book-item {
+.movie-item {
     padding: 1.2rem;
     margin-top: 10px;
     margin: 10px;
@@ -19,13 +19,13 @@
     font-size: 1.4em;
 }
 
-.book-title {
+.movie-title {
     font-size: 1.2em;
     color: #5f4b32; 
     margin: 10px 0;
 }
 
-.book-dourado{
+.movie-dourado{
     border: 2.5px solid #FFD700;
 
     &:first-child{
@@ -35,7 +35,7 @@
     }
 }
 
-.book-prata{
+.movie-prata{
     border: 2.5px solid #C0C0C0;
 
     &:first-child{
@@ -45,7 +45,7 @@
     }
 }
 
-.book-bronze{
+.movie-bronze{
     border: 2.5px solid #CD7F32;
     &:first-child{
         .texto-bronze{
