--- a/src/app/components/registro-de-membros/registro-de-membros.component.html
+++ b/src/app/components/registro-de-membros/registro-de-membros.component.html
@@ -5,7 +5,7 @@
         </mat-card-header>
 
         <mat-card-content>
-            <form [formGroup]="AddBookForm" (ngSubmit)="onSubmit()">
+            <form [formGroup]="AddMovieForm" (ngSubmit)="onSubmit()">
                 <div>
                     <mat-form-field appearance="fill" hideRequiredMarker class="form-input">
                         <mat-label>Nome</mat-label>
@@ -26,7 +26,7 @@
             </mat-form-field>
                 </div>
                 <mat-card-footer>
-                  <button type="submit" mat-flat-button class="submit-button" [disabled]="!AddBookForm.valid">Cadastrar</button>
+                  <button type="submit" mat-flat-button class="submit-button" [disabled]="!AddMovieForm.valid">Cadastrar</button>
                </mat-card-footer>
             </form>
 </mat-card-content>
