--- a/src/app/components/card-alugados/card-alugados.component.html
+++ b/src/app/components/card-alugados/card-alugados.component.html
@@ -11,6 +11,8 @@
     </mat-card-content>
 
     <mat-card-footer class="movie-footer">
+        <p>Atualmente em posse de: <b>NOME</b></p>
+
         <mat-card-actions>	
             <div class="button-row">
                     <button mat-fab extended class="action-button">
