--- a/src/app/components/card-filmes/card-filmes.component.css
+++ b/src/app/components/card-filmes/card-filmes.component.css
@@ -10,7 +10,17 @@
 
 .card-title{
     font-size: 1.8em;
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    justify-content: space-between;
+    padding: 0.5rem;
+    margin: 0;
+    width: 100%;
 
+   b{
+        font-size: 1em;
+   }
 }
 
 .card-subtitle {
