--- a/src/app/components/filmes-mais-alugados/filmes-mais-alugados.component.css
+++ b/src/app/components/filmes-mais-alugados/filmes-mais-alugados.component.css
@@ -26,7 +26,7 @@
     flex-direction: row;
     align-content: center;
 }
-.card-emprestimo {
+.card-aluguel {
     padding-top: 0.4rem;
     padding-bottom: 1rem;
     flex: 1 1 calc(33.33% - 1rem);
