--- a/src/app/components/filmes-mais-alugados/filmes-mais-alugados.component.html
+++ b/src/app/components/filmes-mais-alugados/filmes-mais-alugados.component.html
@@ -5,7 +5,7 @@
         </mat-card-header>
         <mat-card-content>
             <div class="movie-list" *ngIf="movieList.length > 0; else noMovies">
-                <div *ngFor="let movie of movieList; let i = index" class="card-emprestimo">
+                <div *ngFor="let movie of movieList; let i = index" class="card-aluguel">
                     <app-card-mais-alugados [number]="i + 1" [movie]="movie"/>
                 </div>
             </div>
