update: add new logo

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
 <div class="footer">
     <div class="footer-main-section">
-        <img src="https://cdn-icons-png.freepik.com/512/9316/9316745.png" alt="Logo" class="footer-logo">
+        <img src="https://seeklogo.com/images/C/cinema-logo-53411DFFE5-seeklogo.com.png" alt="Logo" class="footer-logo">
 
         <p>
-            Sistema de gerenciamento de biblioteca desenvolvido para consumir uma api em JAVA para a disciplina do instituto federal de orientação a objetos.
+            Sistema de gerenciamento de locadora de filmes desenvolvido para consumir uma api em JAVA para a disciplina do instituto federal de orientação a objetos.
         </p>
     </div>
     <div class="footer-section">
