--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <nav>
-        <a href="#"><img class="logo" src="https://cdn-icons-png.freepik.com/512/9316/9316745.png" alt=""></a>
+        <a href="#"><img class="logo" src="https://seeklogo.com/images/C/cinema-logo-53411DFFE5-seeklogo.com.png" alt=""></a>
         <ul>
             @for (HeaderItem of HeaderItemList; track HeaderItem.name){
                 <li><a href={{HeaderItem.ref}}>{{HeaderItem.name}}</a></li>
