update: add first modal to project

--- a/src/app/components/card-filmes/card-filmes.component.html
+++ b/src/app/components/card-filmes/card-filmes.component.html
@@ -28,7 +28,7 @@
                     </button>       
                 </div>
                 
-                <button mat-mini-fab color="warn">
+                <button mat-mini-fab color="warn" (click)="openDialog()">
                     <mat-icon>delete</mat-icon> 
                 </button>
             </div>
