update: add movie rent and devolution dialog

--- a/src/app/components/card-alugados/card-alugados.component.html
+++ b/src/app/components/card-alugados/card-alugados.component.html
@@ -15,7 +15,7 @@
 
         <mat-card-actions>	
             <div class="button-row">
-                    <button mat-fab extended class="action-button">
+                    <button mat-fab extended class="action-button" (click)="openDevolutionDialog()">
                         <mat-icon>movie</mat-icon>
                         Realizar devolução 
                     </button>       
