--- a/src/app/components/card-filmes/card-filmes.component.html
+++ b/src/app/components/card-filmes/card-filmes.component.html
@@ -10,7 +10,7 @@
     <mat-card-content class="rating-row">
         <ng-container *ngFor="let stars of [].constructor(movie.rating)">
             <mat-icon aria-hidden="false" fontIcon="star" style="color: gold;" class="rating-icon"></mat-icon>
-        </ng-container>''
+        </ng-container>
     </mat-card-content>
     
     <mat-card-footer class="movie-footer">
