--- a/src/app/components/filmes-alugados/filmes-alugados.component.html
+++ b/src/app/components/filmes-alugados/filmes-alugados.component.html
@@ -1,7 +1,7 @@
 <section  class="wrapper">
     <mat-card class="main-card">
         <mat-card-header>
-            <mat-card-title><h2 class="page-title">Registro de filmes alugadosempres</h2></mat-card-title>
+            <mat-card-title><h2 class="page-title">Registro de filmes alugados</h2></mat-card-title>
         </mat-card-header>
         <mat-divider class="divider"/>
         <mat-card-content>
